fix cut and paste finger fumble

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,4 @@ packages = [
 dependencies = { file = ["requirements.txt"] }
 
 [project.entry-points."comfyui.custom_nodes"]
+comfyui-liveportraitkj = "comfyui-liveportraitkj"
