--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "comfyui-liveportraitkj"
 description = "Nodes for [a/LivePortrait](https://github.com/KwaiVGI/LivePortrait)"
 version = "1.1.0"
 license = { text = "MIT License" }
-dependencies = ["pyyaml", "numpy", "opencv-python", "rich"]
+dynamic = ["dependencies"]
 
 [project.urls]
 Repository = "https://github.com/kijai/ComfyUI-LivePortraitKJ"
